==> ZhantaoLi/ARMFLY/ARMFLY_V5_F407/2.第2版DSP和CMSIS-NN神经网络教程教程/V5-227_FIR带通滤波器(支持逐点实时滤波)/User/bsp/src/bsp_uart_esp8266.c <==
#include "bsp.h"
#define AT_CR		'\r'
#define AT_LF		'\n'
#define ESP8266_GPIO_CLK_ALLENABLE() {	\
		__HAL_RCC_GPIOI_CLK_ENABLE();	\
		__HAL_RCC_GPIOB_CLK_ENABLE();	\
		__HAL_RCC_GPIOG_CLK_ENABLE();	\
	};
#define PORT_CH_PD		GPIOI
#define PIN_CH_PD		GPIO_PIN_0
#define PORT_RESET		GPIOB
#define PIN_RESET		GPIO_PIN_7
#define PORT_GPIO2		GPIOG
#define PIN_GPIO2		GPIO_PIN_15
#define PORT_GPIO0		GPIOG
#define PIN_GPIO0		GPIO_PIN_8
#define ESP_CH_PD_0()	HAL_GPIO_WritePin(PORT_CH_PD, PIN_CH_PD, GPIO_PIN_RESET);
#define ESP_CH_PD_1()	HAL_GPIO_WritePin(PORT_CH_PD, PIN_CH_PD, GPIO_PIN_SET);
#define ESP_RESET_0()	HAL_GPIO_WritePin(PORT_RESET, PIN_RESET, GPIO_PIN_RESET);
#define ESP_RESET_1()	HAL_GPIO_WritePin(PORT_RESET, PIN_RESET, GPIO_PIN_SET);
#define ESP_GPIO0_0()	HAL_GPIO_WritePin(PORT_GPIO0, PIN_GPIO0, GPIO_PIN_RESET);
#define ESP_GPIO0_1()	HAL_GPIO_WritePin(PORT_GPIO0, PIN_GPIO0, GPIO_PIN_SET);
#define ESP_ENTER_ISP()	ESP_GPIO0_0()  /* 进入固件升级模式 */
#define ESP_EXIT_ISP()	ESP_GPIO0_1()	/* 退出固件升级模式 */
#define ESP_GPIO2_0()	HAL_GPIO_WritePin(PORT_GPIO2, PIN_GPIO2, GPIO_PIN_RESET);
#define ESP_GPIO2_1()	HAL_GPIO_WritePin(PORT_GPIO2, PIN_GPIO2, GPIO_PIN_SET);

void bsp_InitESP8266(void)
{
	GPIO_InitTypeDef GPIO_InitStruct;

	/* 打开GPIO时钟 */
	ESP8266_GPIO_CLK_ALLENABLE();

	GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;   		/* 设置推挽输出 */
	GPIO_InitStruct.Pull = GPIO_NOPULL;                 /* 上下拉电阻不使能 */
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;  		/* GPIO速度等级 */
	

	GPIO_InitStruct.Pin = PIN_CH_PD;
	HAL_GPIO_Init(PORT_CH_PD, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = PIN_RESET;
	HAL_GPIO_Init(PORT_RESET, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = PIN_GPIO0;
	HAL_GPIO_Init(PORT_GPIO0, &GPIO_InitStruct);

	GPIO_InitStruct.Pin = PIN_GPIO2;
	HAL_GPIO_Init(PORT_GPIO2, &GPIO_InitStruct);

	ESP_GPIO2_1();

	/* CPU的串口配置已经由 bsp_uart_fifo.c 中的 bsp_InitUart() 做了 */
	ESP_CH_PD_0();

	ESP_EXIT_ISP();

	//ESP8266_Reset();

	comSetBaud(COM_ESP8266,115200);
}
