==> ZhantaoLi/ARMFLY/ARMFLY_V7_H743/07.DSP数字信号处理/V7-230_IIR高通滤波器(支持逐点实时滤波)/User/bsp/src/bsp_uart_esp8266.c <==
#include "bsp.h"
#define AT_CR		'\r'
#define AT_LF		'\n'
#define USE_HC574
	#define ESP_CH_PD_0()	HC574_SetPin(GPRS_TERM_ON, 0);
	#define ESP_CH_PD_1()	HC574_SetPin(GPRS_TERM_ON, 1);
	#define ESP_RESET_0()	HC574_SetPin(GPRS_RESET, 0);
	#define ESP_RESET_1()	HC574_SetPin(GPRS_RESET, 1);
	#define ESP_GPIO0_0()	HC574_SetPin(ESP8266_G0, 0);
	#define ESP_GPIO0_1()	HC574_SetPin(ESP8266_G0, 1);
	#define ESP_ENTER_ISP()	ESP_GPIO0_0()  /* 进入固件升级模式 */
	#define ESP_EXIT_ISP()	ESP_GPIO0_1()	/* 退出固件升级模式 */
	#define ESP_GPIO2_0()	HC574_SetPin(ESP8266_G2, 0);
	#define ESP_GPIO2_1()	HC574_SetPin(ESP8266_G2, 1);
	#define RCC_CH_PD 		RCC_AHB1Periph_GPIOI
	#define PORT_CH_PD		GPIOI
	#define PIN_CH_PD		GPIO_PIN_0
	#define RCC_RESET 		RCC_AHB1Periph_GPIOB
	#define PORT_RESET		GPIOB
	#define PIN_RESET		GPIO_PIN_7
	#define RCC_GPIO2 		RCC_AHB1Periph_GPIOG
	#define PORT_GPIO2		GPIOG
	#define PIN_GPIO2		GPIO_PIN_15
	#define RCC_GPIO0 		RCC_AHB1Periph_GPIOG
	#define PORT_GPIO0		GPIOG
	#define PIN_GPIO0		GPIO_PIN_8
	#define ESP_CH_PD_0()	GPIO_ResetBits(PORT_CH_PD, PIN_CH_PD);
	#define ESP_CH_PD_1()	GPIO_SetBits(PORT_CH_PD, PIN_CH_PD);
	#define ESP_RESET_0()	GPIO_ResetBits(PORT_RESET, PIN_RESET);
	#define ESP_RESET_1()	GPIO_SetBits(PORT_RESET, PIN_RESET);
	#define ESP_GPIO0_0()	GPIO_ResetBits(PORT_GPIO0, PIN_GPIO0);
	#define ESP_GPIO0_1()	GPIO_SetBits(PORT_GPIO0, PIN_GPIO0);
	#define ESP_ENTER_ISP()	ESP_GPIO0_0()  /* 进入固件升级模式 */
	#define ESP_EXIT_ISP()	ESP_GPIO0_1()	/* 退出固件升级模式 */

void bsp_InitESP8266(void)
{
#ifdef USE_HC574	/* 使用扩展IO */
	;
#else	
	GPIO_InitTypeDef GPIO_InitStructure;

	/* 打开GPIO时钟 */
	RCC_AHB1PeriphClockCmd(RCC_RESET | RCC_CH_PD | RCC_GPIO0 | RCC_GPIO2, ENABLE);

	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;		/* 设为输出口 */
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;		/* 设为推挽模式 */
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;	/* 上下拉电阻不使能 */
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;	/* IO口最大速度 */

	GPIO_InitStructure.GPIO_Pin = PIN_CH_PD;
	GPIO_Init(PORT_CH_PD, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = PIN_RESET;
	GPIO_Init(PORT_RESET, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = PIN_GPIO0;
	GPIO_Init(PORT_GPIO0, &GPIO_InitStructure);

	GPIO_InitStructure.GPIO_Pin = PIN_GPIO2;
	GPIO_Init(PORT_GPIO2, &GPIO_InitStructure);	
#endif

	ESP_GPIO2_1();
	
	/* CPU的串口配置已经由 bsp_uart_fifo.c 中的 bsp_InitUart() 做了 */
	ESP_CH_PD_0();

	ESP_EXIT_ISP();
	
	//ESP8266_Reset();

	comSetBaud(COM_ESP8266,115200);
}
